--- a/.drone.yml
+++ b/.drone.yml
@@ -9,7 +9,7 @@ script:
   - "sudo DEBIAN_FRONTEND='noninteractive' apt-get install -y libsasl2-dev libssl-dev rsyslog > /dev/null"
   - sudo /usr/sbin/rsyslogd > /dev/null
   - pip install -r requirements.txt > /dev/null
-  - pip install nose coverage flake8 mock > /dev/null
+  - pip install nose coverage flake8 mock funcsigs > /dev/null
   - flake8 .
   - cp anchor/config/config.example.py anchor/config/config.py
   - cp anchor/config/celery-example.py anchor/config/celery.py
