--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,9 @@ services:
   - mongodb
 install:
   - pip install -r requirements.txt
+  - pip install coverage flake8 mock funcsigs
 before_script:
   - cp anchor/config/config.example.py anchor/config/config.py
   - cp anchor/config/celery-example.py anchor/config/celery.py
-script: nosetests
+  - flake8 .
+script: nosetests -v --cover-erase --with-coverage --cover-package=anchor
