--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,9 @@ services:
   - mongodb
 install:
   - pip install -r requirements.txt
-  - pip install coverage==3.7.1 flake8 mock funcsigs python-coveralls
+  - pip install coverage flake8 mock funcsigs
 before_script:
   - cp anchor/config/config.example.py anchor/config/config.py
   - cp anchor/config/celery-example.py anchor/config/celery.py
   - flake8 .
 script: nosetests -v --cover-erase --with-coverage --cover-package=anchor
-after_success:
-  - coveralls
